network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-jira
spec:
  podSelector:
    matchLabels:
      name: jira
  ingress:
    - ports:
      - protocol: TCP
        port: 443
